{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 191,
  "lineage": "fa281022-2f0b-b705-e7ca-c617e327eeca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ss-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f703c132f2b1a20",
            "arn": "arn:aws:ec2:ap-south-1:498116043531:instance/i-03433733135d8572a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03433733135d8572a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "java",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e033536ee0bb821a",
            "private_dns": "ip-10-0-1-41.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_ip": "43.205.146.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b1378ddc6d43aa8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04df0eb08c21a4263",
            "tags": {
              "Name": "development-server"
            },
            "tags_all": {
              "Name": "development-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d335b22be711b616"
            ]
          },
          "dependencies": [
            "aws_security_group.ss-sg",
            "aws_subnet.ss-sn-1",
            "aws_vpc.ss_vpc",
            "data.aws_ami.amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ss-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498116043531:internet-gateway/igw-0f08ec17f039abf97",
            "id": "igw-0f08ec17f039abf97",
            "owner_id": "498116043531",
            "tags": {
              "Name": "development-igw"
            },
            "tags_all": {
              "Name": "development-igw"
            },
            "vpc_id": "vpc-092890d2060a4674e"
          },
          "dependencies": [
            "aws_vpc.ss_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ssmain-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498116043531:route-table/rtb-0eea9d778cc07c9ff",
            "id": "rtb-0eea9d778cc07c9ff",
            "owner_id": "498116043531",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f08ec17f039abf97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-ssmain-rtb"
            },
            "tags_all": {
              "Name": "development-ssmain-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-092890d2060a4674e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ss-gw",
            "aws_vpc.ss_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd98a3fd0a3acd80",
            "route_table_id": "rtb-0eea9d778cc07c9ff",
            "subnet_id": "subnet-04df0eb08c21a4263"
          },
          "dependencies": [
            "aws_internet_gateway.ss-gw",
            "aws_route_table.ssmain-rtb",
            "aws_subnet.ss-sn-1",
            "aws_vpc.ss_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ss-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498116043531:security-group/sg-0d335b22be711b616",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d335b22be711b616",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ss-sg",
            "name_prefix": "",
            "owner_id": "498116043531",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "development-sg"
            },
            "tags_all": {
              "Name": "development-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-092890d2060a4674e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ss_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ss-sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498116043531:subnet/subnet-04df0eb08c21a4263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04df0eb08c21a4263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498116043531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sssubnet01",
              "subnet": "01"
            },
            "tags_all": {
              "Name": "sssubnet01",
              "subnet": "01"
            },
            "vpc_id": "vpc-092890d2060a4674e"
          },
          "dependencies": [
            "aws_vpc.ss_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ss_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498116043531:vpc/vpc-092890d2060a4674e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069a58ecb5f187bd0",
            "default_route_table_id": "rtb-0159402c079c10ca0",
            "default_security_group_id": "sg-0c0729c3e3f71daab",
            "dhcp_options_id": "dopt-0abd6f779a41c51c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092890d2060a4674e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0159402c079c10ca0",
            "owner_id": "498116043531",
            "tags": {
              "Name": "development"
            },
            "tags_all": {
              "Name": "development"
            }
          }
        }
      ]
    }
  ]
}